[gd_scene load_steps=5 format=3 uid="uid://dji2rowy7a7a8"]

[ext_resource type="Script" uid="uid://dgl0nhgatomt6" path="res://Scenes/GameMainScene/game_main_scene.gd" id="1_4hbeh"]
[ext_resource type="PackedScene" uid="uid://v3cn8qd7goio" path="res://Scenes/All Timers/all_timers_general_scene.tscn" id="2_4pb6x"]
[ext_resource type="PackedScene" uid="uid://b85ihm0oy3voe" path="res://Scenes/ParallaxBackground/parallax_background.tscn" id="2_ujb81"]
[ext_resource type="PackedScene" uid="uid://bwqfk8mxoh15r" path="res://Scenes/Particles/Wind/wind.tscn" id="3_5gd7p"]

[node name="game_main_scene" type="Node2D"]
script = ExtResource("1_4hbeh")

[node name="parallax_background" parent="." instance=ExtResource("2_ujb81")]
position = Vector2(960, 540)
scale = Vector2(3.4, 3.4)

[node name="particles" type="Node2D" parent="."]

[node name="wind" parent="particles" instance=ExtResource("3_5gd7p")]
position = Vector2(1816, 533)
amount = 10

[node name="all_timers_general_scene" parent="." instance=ExtResource("2_4pb6x")]

[connection signal="ended" from="all_timers_general_scene" to="." method="_on_all_timers_general_scene_ended"]
[connection signal="onloaded" from="all_timers_general_scene" to="." method="_on_all_timers_general_scene_onloaded"]
[connection signal="paused" from="all_timers_general_scene" to="." method="_on_all_timers_general_scene_paused"]
[connection signal="running" from="all_timers_general_scene" to="." method="_on_all_timers_general_scene_running"]
[connection signal="stopped" from="all_timers_general_scene" to="." method="_on_all_timers_general_scene_stopped"]
